--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "idb": "^5.0.7"
+  }
 }
