--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "idb": "^5.0.7",
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "web-push": "^3.4.4"
   }
 }
