--- a/manifest.json
+++ b/manifest.json
@@ -43,6 +43,21 @@
       "sizes": "192x192",
       "type": "image\/png",
       "density": "4.0"
+    },
+    {
+      "src": "assets/icons/128x128.png",
+      "sizes": "128x128",
+      "type": "image\/png"
+    },
+    {
+      "src": "assets/icons/256x256.png",
+      "sizes": "256x256",
+      "type": "image\/png"
+    },
+    {
+      "src": "assets/icons/512x512.png",
+      "sizes": "512x512",
+      "type": "image\/png"
     }
   ],
   "gcm_sender_id": "810474948980"
