--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod": "webpack-cli --mode production --progress"
+    "prod": "webpack-cli --mode production --progress",
+    "dev": "webpack-cli --mode development --progress",
+    "start": "http-server"
   },
   "keywords": [],
   "author": "Enggar",
@@ -18,13 +20,20 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.2",
     "eslint-webpack-plugin": "^2.2.0",
+    "http-server": "^0.12.3",
     "standard": "^16.0.1",
     "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "workbox-webpack-plugin": "^6.0.0-rc.0"
   },
   "dependencies": {
     "idb": "^5.0.7",
     "live-server": "^1.2.1",
-    "web-push": "^3.4.4"
+    "web-push": "^3.4.4",
+    "workbox-cacheable-response": "^5.1.4",
+    "workbox-expiration": "^5.1.4",
+    "workbox-precaching": "^5.1.4",
+    "workbox-routing": "^5.1.4",
+    "workbox-strategies": "^5.1.4"
   }
 }
