--- a/manifest.json
+++ b/manifest.json
@@ -58,6 +58,18 @@
       "src": "assets/icons/512x512.png",
       "sizes": "512x512",
       "type": "image\/png"
+    },
+    {
+      "src": "assets/icons/maskable_icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "assets/icons/maskable_icon_192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "gcm_sender_id": "810474948980"
